--- a/index.html
+++ b/index.html
@@ -132,16 +132,8 @@
 				<p>flying in the blue sky</p>
 				<p>Now things are different...</p>
 				<p>real story of your life</p>
-				<p>is just about to begin</p>
-				<p>indeed..</p>
-				<p>but...</p>
-				<p>don't worry</p>
-				<p>because...</p>
-				<p>God has your back</p>
-				<p>and</p>
-				<p>this year will be better</p>
-				<p>and I hope</p>
-				<p>you'll find...</p>
+				<p>is just about to begin.</p>
+				<p>I hope you'll find...</p>
 				<p>happiness along the way</p>
 				<p>keep your spirit up</p>
 				<p>enjoy every single moment...</p>
@@ -150,7 +142,7 @@
 				<p>and make it the best memory..</p>
 				<p>lastly...</p>
 				<p>I'd like to wish you one more time</p>
-				<p>a very happy birthday Xola Mathembisa</p>
+				<p>a very happy birthday Kiranuu...</p>
 			</div>
 		</div>
 		<div class="navbar navbar-fixed-bottom">
